# RayTracingInAWeekend

./: .gitignore  Cargo.toml
src/: aabb.rs  camera.rs  color.rs  hittable.rs  main.rs  material.rs  math.rs  perlin.rs  ray.rs  size2i.rs  texture.rs  transformations.rs  vec2.rs  vec3.rs  worlds.rs
src/app/: main.rs  obj_loader.rs  rendering.rs  worlds.rs
src/app/worlds/: demo_worlds.rs  mod.rs  world_builder.rs
src/lib/: aabb.rs  background_color.rs  color.rs  common.rs  hittable.rs  lib.rs  material.rs  math.rs  mesh.rs  perlin.rs  ray.rs  rendering.rs  texture.rs  transformations.rs  vec2.rs  vec3.rs  world_scattering_distribution.rs
src/lib/hittable/: rect_geometry.rs  sphere_geometry.rs  triangle_geometry.rs
