[package]
name = "ray_tracing_in_a_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="ray_tracing_in_a_weekend"
path="src/main.rs"

[dependencies]
rand="0.8.5"
rand_distr="0.4.3"
rand_xoshiro="0.6.0"
image="0.24.4"